--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,9 @@
 RewriteEngine On
 RewriteCond %{pascal} !-f
 RewriteRule ^([^\.]+)$ $pascal.html [NC,L]
+
+RewriteCond %{phatsua} !-f
+RewriteRule ^([^\.]+)$ $phatsua.html [NC,L]
+
+RewriteCond %{encoder} !-f
+RewriteRule ^([^\.]+)$ $encoder.html [NC,L]
