--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,6 @@ RewriteRule ^([^\.]+)$ $phatsua.html [NC,L]
 
 RewriteCond %{encoder} !-f
 RewriteRule ^([^\.]+)$ $encoder.html [NC,L]
+
+RewriteCond %{ic3} !-f
+RewriteRule ^([^\.]+)$ $ic3.html [NC,L]
