--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
+  "name": "person-website",
+  "version": "1.0.0",
   "homepage": "https://pdt1806.github.io/",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
