--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "person-website",
+  "name": "personal-website",
   "version": "1.0.0",
   "homepage": "https://pdt1806.github.io/",
   "scripts": {
