--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-website",
   "version": "2.0.0",
-  "homepage": "https://pdt1806.github.io/",
+  "homepage": "https://bennynguyen.us",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
