--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.7",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.4",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
