--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
     "serve": "vite preview"
   },
   "reactSnap": {
-    "source": "dist",
-    "minifyHtml": {
-      "collapseWhitespace": false,
-      "removeComments": false
-    }
+    "source": "dist"
   },
   "dependencies": {
     "aos": "^2.3.4",
