--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "postbuild": "react-snap",
     "serve": "vite preview"
   },
   "reactSnap": {
@@ -16,8 +15,7 @@
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-recaptcha": "^3.1.0",
-    "react-snap": "^1.23.0"
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
