--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "personal-website",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "homepage": ".",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
     "serve": "vite preview"
   },
-  "reactSnap": {
-    "source": "dist"
-  },
   "dependencies": {
+    "@types/react-lazy-load-image-component": "^1.6.3",
     "aos": "^2.3.4",
+    "blurhash": "^2.0.5",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@mojojoejo/vite-plugin-purgecss": "^1.1.0",
     "@types/aos": "^3.0.4",
+    "@types/node": "^20.10.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-google-recaptcha": "^2.1.5",
     "@vitejs/plugin-react": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.3",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vite-plugin-style-import": "^2.0.0"
   }
 }
